# queuelens

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
app/: __init__.py  config.py  main.py
app/api/routes/: actions.py  audit.py  bulk.py  health.py  messages.py  metrics.py  platform.py  queues.py
app/application/: action_service.py  alert_engine.py  bulk_service.py  environments.py  message_service.py  queue_service.py
app/auth/: __init__.py  basic.py
app/domain/: fingerprint.py  models.py  xdeath.py
app/infrastructure/: mailer.py
app/infrastructure/persistence/: audit_repository.py  database.py  models.py  store.py
app/infrastructure/rabbitmq/: __init__.py  connection.py  management_client.py  message_browser.py  message_operator.py
app/observability/: metrics.py
app/web/: __init__.py  routes.py
config/: replay-targets.example.json
deploy/prometheus/: alerts.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  OPERATIONS.md  SAFETY.md
outputs/: QueueLens-Phase-1-Async-Scope.md
scripts/: build_ds_bundle.py  build_frontend.mjs
site/: index.html
tests/: __init__.py  test_actions.py  test_audit.py  test_bulk.py  test_health.py  test_integration_rabbitmq.py  test_masking.py  test_message_browser.py  test_metrics.py  test_platform.py  test_queue_routes.py  test_queue_service.py  test_web.py
tests/e2e/: test_spa_smoke.py
(+62 files in other folders)
