[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "queuelens"
version = "0.1.0"
description = "Async RabbitMQ dead-letter queue inspector and safe replay tool"
requires-python = ">=3.12"
dependencies = [
  "aio-pika>=9.4,<10",
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.6,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

